kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dimmadome
  namespace: dimmadome
spec:
  selector:
    app: dimmadome
  ports:
  - port: 80
    targetPort: http
