kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dimmadome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: dimmadome-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - host: dimmado.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dimmadome
              port:
                name: http
  tls:
  - hosts:
    - dimmado.me
    secretName: dimmadome-tls
